; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_emu.c_EmuScanBegin16_ld.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_emu.c_EmuScanBegin16_ld.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ld_counter = common dso_local global i32 0, align 4
@g_screen_ptr = common dso_local global i64 0, align 8
@gp2x_current_bpp = common dso_local global i32 0, align 4
@DrawLineDest = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @EmuScanBegin16_ld to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @EmuScanBegin16_ld(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @ld_counter, align 4
  %5 = load i32, i32* %3, align 4
  %6 = sub i32 %4, %5
  %7 = icmp sgt i32 %6, 100
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* @ld_counter, align 4
  br label %9

9:                                                ; preds = %8, %1
  br i1 true, label %10, label %13

10:                                               ; preds = %9
  %11 = load i32, i32* @ld_counter, align 4
  %12 = call i32 @emu_scan_begin(i32 %11)
  store i32 %12, i32* %2, align 4
  br label %24

13:                                               ; preds = %9
  %14 = load i64, i64* @g_screen_ptr, align 8
  %15 = inttoptr i64 %14 to i8*
  %16 = load i32, i32* @ld_counter, align 4
  %17 = mul i32 320, %16
  %18 = load i32, i32* @gp2x_current_bpp, align 4
  %19 = mul i32 %17, %18
  %20 = udiv i32 %19, 8
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds i8, i8* %15, i64 %21
  store i8* %22, i8** @DrawLineDest, align 8
  br label %23

23:                                               ; preds = %13
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %10
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @emu_scan_begin(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
